@@ -1,3 +1,9 @@
+2015-01-26  Trevor Murphy  <trevor.m.murphy@gmail.com>
+
+	* nnimap.el (nnimap-header-parameters): Refactor and request
+	X-GM-LABELS if it's been announced.
+	(nnimap-transform-headers): Gather and output GM-LABELS.
+
 2014-12-30  Peder O. Klingenberg  <peder@klingenberg.no>
 
 	* mm-decode.el (mm-display-part): Make non-string methods work.
